include/fitpack_grid_polar_c.h

FITPACK_CAPI_EXPORT bool fitpack_grid_polar_c_get_z0_exact(const fitpack_grid_polar_c* self);
FITPACK_CAPI_EXPORT void fitpack_grid_polar_c_set_z0_exact(fitpack_grid_polar_c* self, bool z0_exact);
FITPACK_CAPI_EXPORT bool fitpack_grid_polar_c_get_z0_zero_gradient(const fitpack_grid_polar_c* self);
FITPACK_CAPI_EXPORT void fitpack_grid_polar_c_set_z0_zero_gradient(fitpack_grid_polar_c* self, bool z0_zero_gradient);
FITPACK_CAPI_EXPORT int32_t* fitpack_grid_polar_c_ref_nmax(const fitpack_grid_polar_c* self);
FITPACK_CAPI_EXPORT int32_t* fitpack_grid_polar_c_ref_bc_continuity_origin(const fitpack_grid_polar_c* self);
FITPACK_CAPI_EXPORT int32_t* fitpack_grid_polar_c_ref_bc_boundary(const fitpack_grid_polar_c* self);