src/capi/fitpack_gridded_polar_c.f90


    !> Get logical property 'z0_exact'
    logical(c_bool) function fitpack_grid_polar_c_get_z0_exact(this) &
        bind(C, name='fitpack_grid_polar_c_get_z0_exact')
        type(fitpack_grid_polar_c), intent(in) :: this
        type(fitpack_grid_polar), pointer :: fthis
        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_grid_polar_c_get_z0_exact = logical(fthis%z0_exact, c_bool)
        else
            fitpack_grid_polar_c_get_z0_exact = .false._c_bool
        end if
    end function fitpack_grid_polar_c_get_z0_exact

    !> Set logical property 'z0_exact'
    subroutine fitpack_grid_polar_c_set_z0_exact(this, value) &
        bind(C, name='fitpack_grid_polar_c_set_z0_exact')
        type(fitpack_grid_polar_c), intent(inout) :: this
        logical(c_bool), intent(in), value :: value
        type(fitpack_grid_polar), pointer :: fthis
        fthis => f_pointer(this)
        if (associated(fthis)) then
            fthis%z0_exact = logical(value)
        end if
    end subroutine fitpack_grid_polar_c_set_z0_exact

    !> Get logical property 'z0_zero_gradient'
    logical(c_bool) function fitpack_grid_polar_c_get_z0_zero_gradient(this) &
        bind(C, name='fitpack_grid_polar_c_get_z0_zero_gradient')
        type(fitpack_grid_polar_c), intent(in) :: this
        type(fitpack_grid_polar), pointer :: fthis
        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_grid_polar_c_get_z0_zero_gradient = logical(fthis%z0_zero_gradient, c_bool)
        else
            fitpack_grid_polar_c_get_z0_zero_gradient = .false._c_bool
        end if
    end function fitpack_grid_polar_c_get_z0_zero_gradient

    !> Set logical property 'z0_zero_gradient'
    subroutine fitpack_grid_polar_c_set_z0_zero_gradient(this, value) &
        bind(C, name='fitpack_grid_polar_c_set_z0_zero_gradient')
        type(fitpack_grid_polar_c), intent(inout) :: this
        logical(c_bool), intent(in), value :: value
        type(fitpack_grid_polar), pointer :: fthis
        fthis => f_pointer(this)
        if (associated(fthis)) then
            fthis%z0_zero_gradient = logical(value)
        end if
    end subroutine fitpack_grid_polar_c_set_z0_zero_gradient

    !> Get pointer to scalar property 'nmax'
    type(c_ptr) function fitpack_grid_polar_c_ref_nmax(this) &
        bind(C, name='fitpack_grid_polar_c_ref_nmax')
        type(fitpack_grid_polar_c), intent(in) :: this
        type(fitpack_grid_polar), pointer :: fthis
        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_grid_polar_c_ref_nmax = c_loc(fthis%nmax)
        else
            fitpack_grid_polar_c_ref_nmax = c_null_ptr
        end if
    end function fitpack_grid_polar_c_ref_nmax

    !> Get pointer to scalar property 'bc_continuity_origin'
    type(c_ptr) function fitpack_grid_polar_c_ref_bc_continuity_origin(this) &
        bind(C, name='fitpack_grid_polar_c_ref_bc_continuity_origin')
        type(fitpack_grid_polar_c), intent(in) :: this
        type(fitpack_grid_polar), pointer :: fthis
        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_grid_polar_c_ref_bc_continuity_origin = c_loc(fthis%bc_continuity_origin)
        else
            fitpack_grid_polar_c_ref_bc_continuity_origin = c_null_ptr
        end if
    end function fitpack_grid_polar_c_ref_bc_continuity_origin

    !> Get pointer to scalar property 'bc_boundary'
    type(c_ptr) function fitpack_grid_polar_c_ref_bc_boundary(this) &
        bind(C, name='fitpack_grid_polar_c_ref_bc_boundary')
        type(fitpack_grid_polar_c), intent(in) :: this
        type(fitpack_grid_polar), pointer :: fthis
        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_grid_polar_c_ref_bc_boundary = c_loc(fthis%bc_boundary)
        else
            fitpack_grid_polar_c_ref_bc_boundary = c_null_ptr
        end if
    end function fitpack_grid_polar_c_ref_bc_boundary

end module fitpack_gridded_polar_c
